--- a/overview/overview.css
+++ b/overview/overview.css
@@ -152,10 +152,10 @@ input[type="text"] {
     position: relative;
     max-width: auto;
     margin-top: 1rem;
-    margin-bottom: 5rem;
+    /* margin-bottom: 5rem; */
     fill: #FFF;
     stroke-width: 0.5px;
-    stroke: var(--brand-neutrals-gray-medium, #A7A8AA);
+    /* stroke: var(--brand-neutrals-gray-medium, #A7A8AA); */
     filter: drop-shadow(0px 0px 15px rgba(0, 0, 0, 0.15));
     font-family: "Noto Sans";
 }
@@ -240,6 +240,7 @@ input[type="text"] {
     width: 0.5rem;
     height: 0.5rem;
     margin-left: 0.25rem;
+    color: #007ABC;
 }
 
 .card-footer {
