--- a/overview-details/overview-details.css
+++ b/overview-details/overview-details.css
@@ -6,12 +6,14 @@ body {
 }
 
 .container {
-    max-width: 800px;
+    /* max-width: 800px; */
+    display: flex;
     margin: auto;
     background: white;
     padding: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
+   /* Added for positioning the header */
 }
 
 h2 {
@@ -29,31 +31,41 @@ h2 {
 
 .tabs {
     display: flex;
-    margin-bottom: 10px;
+    flex-direction: row;
+    /* margin-bottom: 10px; */
+    /* border-bottom: 3.5px solid #528320; */
 }
 
 .tab-button {
-    background: #dbe9f6;
+    background: none;
     border: none;
-    padding: 10px 20px;
+    padding: 10px;
     cursor: pointer;
-    flex: 1;
+    /* flex: 1; */
     font-size: 16px;
     transition: 0.3s;
+    color: #4b5563; /* Default text color */
+    display: flex;
+    align-items: center;
+    /* justify-content: start; */
+    gap: 0.5rem;
+    font-family: "Noto Sans", sans-serif;
+    font-weight: 600;
+    text-transform: capitalize;
 }
 
-.tab-button:hover {
+/* .tab-button:hover {
     background: #2d6da3;
     color: white;
-}
+} */
 
 .tab-button.active {
-    background: #2d6da3;
-    color: white;
+    border-bottom: 3.5px solid #528320; /* Active tab underline */
 }
 
 .tab-content {
     display: none;
+    padding-top: 20px; /* Added padding for spacing */
 }
 
 .tab-content.active {
